--- a/pos.html
+++ b/pos.html
@@ -12,57 +12,51 @@
 <body>
     <div id="container">
         <div id="show-output">
-            <div id="table">
-                <table>
+            <div id="show-table">
+                <table id="table">
                     <tr>
                         <th>순번</th>
                         <th>메뉴</th>
                         <th>수량</th>
                         <th>가격</th>
                     </tr>
+                <template id=order-template>
+                    <tr class="order-menu">
+                            <td class="num"><!-- 1 --> </td>
+                            <td class="menu">아메리카노 <span class="time"><!-- (21:03) --></span></td>
+                            <td class="quantity"><button class="plus"><!-- + --></button><input class="q-value" type="text"value="1"><button class="minus"><!-- - --></button></td>
+                            <td class="price"><!-- 2,800 --></td>
+                    </tr>
+                </template>
                 </table>
             </div>
             <div id="calculate">
-                <div class="cal">총 수량 : <span id="total-quantity">0</span></div>
-                <div class="cal">주문 금액 : <span id="total-cost">0</span></div>
-                <div class="cal">청구 금액 : <span id="pay">0</span></div>
-                <div class="cal">남은 금액 : <span id="cur-pay">0</span></div>
+                <div>총 수량 : <span id="total-quantity">0</span></div>
+                <div>주문 금액 : <span id="total-cost">0</span></div>
+                <div>청구 금액 : <span id="pay">0</span></div>
+                <div>남은 금액 : <span id="cur-pay">0</span></div>
             </div>
         </div>
         <div id="show-input">
-            <!-- button category 템플릿-->
-            <div id="category-btn">
-                <button class="category-item">Aid</button>
-                <button class="category-item">TEA</button>
-                <button class="category-item">HOT coffee</button>
-                <button class="category-item">ICED coffee</button>
+            <div id="category-item">
+                <button class="category-btn">Aid</button>
+                <button class="category-btn">TEA</button>
+                <button class="category-btn">HOT coffee</button>
+                <button class="category-btn">ICED coffee</button>
             </div>
-            <!-- button menu 템플릿 -->
-            <div id="menu-btn">
-                <button class="menu-item"><div class="menu-name"><!-- 아메리카노 -->아메리카노</div><div class="menu-price"><!-- 2,800 -->2,800</div></button>
-                <button class="menu-item"><div class="menu-name"><!-- 아메리카노 -->카페라떼</div><div class="menu-price"><!-- 2,800 -->3,300</div></button>
+            
+            <div id="menu-item">
+                <template id="menu-template">
+                    <button><div class="menu-name"><!-- 아메리카노 --></div><div class="menu-price"><!-- 2,800 --></div></button>
+                </template>
             </div>
-            <div id="payment-btn">
-                <button class="payment-item">현금 결제</button>
-                <button class="payment-item">카드 결제</button>
-                <button class="payment-item">복합 결제</button>
+            <div id="payment-item">
+                <button class="payment-btn">현금 결제</button>
+                <button class="payment-btn">카드 결제</button>
+                <button class="payment-btn">복합 결제</button>
             </div>
         </div>
     </div>
-    <template id=order-template><!-- th 밑에 -->
-        <tr class="order-menu">
-            <td class="num"><!-- 1 --></td>
-            <td class="menu"><!-- 아메리카노 --><span class="time"><!-- (21:03) --></span></td>
-            <td class="quantity"><!-- 1 --></td>
-            <td class="price"><!-- 2,800 --></td>
-        </tr>
-    </template>
-    <template id="category-template"><!-- show-input 밑에 -->
-        <button><!-- 에이드,TEA,HOT coffee,ICED coffee --></button>
-    </template>
-    <template id="menu-template"><!-- show-input 밑에 -->
-        <button><div class="menu-name"><!-- 아메리카노 --></div><div class="menu-price"><!-- 2,800 --></div></button>
-    </template>
     <script src="pos.js"></script>
 </body>
 </html>
