--- a/pos.html
+++ b/pos.html
@@ -41,9 +41,7 @@
             <button class="pasta">파스타</button>  
             <button class="alcol">주류</button>  
          </div>
-         <div id="menuItems">
-            <!-- flexBox를 이용하여 1행 4열씩 나열한다. -->
-         </div>
+         <div id="menuItems"></div>
       </div>
       <div id="payment">
          <!-- Advenced -->
