--- a/pos.html
+++ b/pos.html
@@ -14,23 +14,25 @@
    <div id="leftSection">
       <div id="orderContainer">
          <div id="order">
-            <!-- span 로 컬럼의 제목을 만든다. -->
             <div id="orderTitle">
+               <!-- span 로 컬럼의 제목을 만든다. -->
                <span>번호</span>
                <span>이름</span>
                <span>가격</span>
                <span>수량</span>
+            </div>        
+            <div id="orderContent">
+               <!-- 주문 내용 -->
             </div>
-            <!-- 주문 내용 -->
-            <div id="orderContent"></div>
-            <!-- 총 주문 수량 && 총 합계 금액 넣는다. -->
             <div id="orderTotal">
+               <!-- 총 주문 수량 && 총 합계 금액 넣는다. -->
                <span>총 금액<p>0</p></span>
                <span>총 수량<p>0</p></span>
             </div>
          </div>
          <div id="calculator">
-            calculator
+            <button>reset</button>
+            <button>calculator</button>
             <!-- Advenced 버튼을 클릭하면 계산기 화면에 출력 -->
          </div>
       </div>
