--- a/calc/calc.html
+++ b/calc/calc.html
@@ -6,7 +6,26 @@
    <title>계산기</title>
 </head>
 <body>
-   <!-- 계산기 영역 -->
+   <div>숫자영역</div>
+   <div>숫자영역</div>
+   <button data-key="*">✖</button>
+   <button data-key="-">➖</button>
+   <button data-key="+">➕</button>
+   <button data-key="/">➗</button>
+   <button data-key="Escape">CLEAR</button>
+   <button data-key="Backspace">BACK</button>
+   <button data-key="7">7</button>
+   <button data-key="8">8</button>
+   <button data-key="9">9</button>
+   <button data-key="4">4</button>
+   <button data-key="5">5</button>
+   <button data-key="6">6</button>
+   <button data-key="1">1</button>
+   <button data-key="2">2</button>
+   <button data-key="3">3</button>
+   <button data-key="0">0</button>
+   <button data-key="00">00</button>
+   <button data-key="Enter">=</button>
    <script src="calc.js"></script>
 </body>
 </html>
