--- a/pos.html
+++ b/pos.html
@@ -31,8 +31,8 @@
             </div>
          </div>
          <div id="calculator">
-            <button>reset</button>
-            <button>calculator</button>
+            <button>RESET</button>
+            <button>계산기</button>
             <!-- Advenced 버튼을 클릭하면 계산기 화면에 출력 -->
          </div>
       </div>
